--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 main {
-    background-color: black;
+    background-color: rgb(63, 185, 140);
     width: 500px;
     margin: auto;
     padding: 10px;
